# sead_clearinghouse_import

./: .gitignore  .pylintrc  IMPORT.md  Makefile  Pipfile  README.md  config.yml  import.sh  load_file.py  pyproject.toml  runner.py  scratchpad.sql  setup.py
importer/: __init__.py  metadata.py  options.py  parser.py  policies.py  preprocess.py  process.py  process_xml.py  repository.py  specification.py  submission.py  to_csv.py  to_xml.py  utility.py  xml_processor.py
importer/configuration/: __init__.py  config.py  inject.py
importer/dispatchers/: __init__.py  to_xml.py
importer/model/: __init__.py  exceptions.py  meta_data.py  metadata.py  repository.py  specification.py  submission.py  submission_data.py  tables_with_data.py  to_csv.py  value_data.py
importer/scripts/: csv2table.py  import-excel.py  import_excel.py  remove.py  utility.py
importer/sql/: checks.sql  sead_columns.sql  sead_tables.sql
importer/tests/: utility_test.py
importer/uploader/: __init__.py  csv_uploader.py  xml_to_csv.py  xml_to_csv_uploader.py  xml_to_to_csv.py  xml_uploader.py
resources/: config-template.yml  scratchpad.sql
tests/: __init__.py  adna_test.py  config_test.py  conftest.py  living_tree_test.py  metadata_test.py  options_test.py  policy_test.py  process_test.py  sandbox_test.py  submission_test.py  test_adna.py  tests.env  to_csv_test.py  utility.py  utility_test.py  xml_test.py
tests/submissions/: adna_test.py  living_tree_test.py
tests/test_data/: building_dendro_reduced.xlsx  building_dendro_reduced.xml  building_dendro_reduced_tidy.xml  config.yml  sead_columns.json  sead_tables.json
