[tool.poetry]
name = "sead-clearinghouse-import"
version = "0.1.0"
description = "SEAD Clearing House Import System"
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
psycopg2 = "^2.9.9"
xlrd = "^2.0.1"
lxml = "^4.9.4"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
