[tool.poetry]
name = "sead-clearinghouse-import"
version = "0.1.0"
description = "SEAD Clearing House Import System"
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
psycopg2 = "^2.9.9"
xlrd = "^2.0.1"
lxml = "^4.9.4"
click = "^8.1.7"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.23"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.0"
pytest = "^7.4.3"

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true
skip_magic_trailing_comma = false
skip-magic-trailing-comma = false
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
  | .venv
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = ["importer", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
