[tool.poetry]
name = "sead-clearinghouse-import"
version = "0.1.0"
description = "SEAD Clearing House Import System"
authors = ["Roger Mähler <roger.mahler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
numpy = "^1.26.2"
pandas = "^2.1.4"
psycopg2 = "^2.9.9"
xlrd = "^2.0.1"
lxml = "^4.9.4"
click = "^8.1.7"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.23"
jinja2 = "^3.1.2"
xlsxwriter = "^3.1.9"
pyaml = "^24.9.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.3"
black = "^24.10.0"

[tool.poetry.scripts]
process-submission = "importer.scripts.process_submission:import_file"
import-excel = "importer.scripts.process_submission:import_file"

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true
skip-magic-trailing-comma = false
exclude = '''
(
  \.git
  | \.pypy_cache
  | \.pytest_cache
  | \.mypy_cache
  | deprecated
  | .venv
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = ["importer", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
